--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>Sentimony Demo</title>
   </head>
   <body>
-    <textarea id="tiny"></textarea>
+    <textarea id="tiny">
+      <p>Well, crying isn’t gonna bring him back, unless your tears smell like dog food. So you can either sit there crying and eating can after can of dog food until your tears smell enough like dog food to make your dog come back, or you can go out there and find your dog.</p>
+    </textarea>
+    <p style="text-align:center"><a href="https://github.com/thedannywahl/sentimony">Get Sentimony</a></p>
     <script src="https://cloud.tinymce.com/4/tinymce.min.js?apiKey=hyr4pz6958k872n6z2yvu2e3foqk15i57ggcfx8tvb3wloxu"></script>
     <script src="https://cdn.jsdelivr.net/gh/thedannywahl/sentimony@master/dist/sentimony/plugin.min.js"></script>
     <script>
@@ -14,13 +17,9 @@
         plugins: [
           'sentimony advlist autolink lists link image charmap print preview anchor textcolor',
           'searchreplace visualblocks code fullscreen',
-          'insertdatetime media table paste code help wordcount'
+          'insertdatetime media table paste code help'
         ],
         toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help',
-        content_css: [
-          '//fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
-          '//www.tiny.cloud/css/codepen.min.css'
-        ]
       });
     </script>
   </body>
