update demo text to "positive"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <textarea id="tiny">
-      <p>Well, crying isn’t gonna bring him back, unless your tears smell like dog food. So you can either sit there crying and eating can after can of dog food until your tears smell enough like dog food to make your dog come back, or you can go out there and find your dog.</p>
+      <p>This is a thousand monkeys working at a thousand typewriters. Soon they’ll have written the greatest novel known to man. Let’s see. It was the best of times, it was the “blurst” of times! You stupid monkey!</p>
     </textarea>
     <p style="text-align:center"><a href="https://github.com/thedannywahl/sentimony">Get Sentimony</a></p>
     <script src="https://cloud.tinymce.com/4/tinymce.min.js?apiKey=hyr4pz6958k872n6z2yvu2e3foqk15i57ggcfx8tvb3wloxu"></script>
