--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <textarea id="tiny">
-      <p>This is a thousand monkeys working at a thousand typewriters. Soon they’ll have written the greatest novel known to man. Let’s see. It was the best of times, it was the “blurst” of times! You stupid monkey!</p>
+      <p>Go ahead and type something like, <p>
+      <blockquote>This is a thousand monkeys working at a thousand typewriters. Soon they’ll have written the greatest novel known to man. Let’s see. 'It was the best of times, it was the “blurst” of times!' You stupid monkey!</blockquote>
+      <p>then click on the "😀" or "😞" in the bottom right to view the sentiment analysis.</p>
     </textarea>
     <p style="text-align:center"><a href="https://github.com/thedannywahl/sentimony">Get Sentimony</a></p>
     <script src="https://cloud.tinymce.com/4/tinymce.min.js?apiKey=hyr4pz6958k872n6z2yvu2e3foqk15i57ggcfx8tvb3wloxu"></script>
