add height to demo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       tinymce.init({
         selector: 'textarea',
         menubar: false,
+        height: 500,
         plugins: [
           'sentimony advlist autolink lists link image charmap print preview anchor textcolor',
           'searchreplace visualblocks code fullscreen',
